# ANESE

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  README.md  _config.yml  appveyor.yml  build_and_run.ps1  build_and_run.sh  cppcheck.sh  mk_clang.ps1  mk_msvc.ps1  nestest.sh  wideNES.md
.github/workflows/: CI.yml
cmake/: FindSDL2.cmake
docs/obelisk.me.uk/6502/: addressing.html  index.html  reference.html  registers.html
docs/personal_research/: 6502.txt  6502_notes.md  6502_sorted.txt
research/obelisk.me.uk/6502/: algorithms.html  architecture.html  instructions.html
research/personal_research/: 6502_lookup_table.txt  6502_opcode_list.txt  6502_sorted.txt  PPU_notes.md
resources/ANESE.app/Contents/: Info.plist
resources/ANESE.app/Contents/Resources/: anese.icns
resources/icons/: anese.rc
roms/: README.md
roms/tests/apu/apu_test/: readme.txt
roms/tests/cpu/cpu_exec_space/: readme.txt  test_cpu_exec_space_apu.nes  test_cpu_exec_space_ppuio.nes
roms/tests/cpu/cpu_exec_space/source/: test_cpu_exec_space_apu.s  test_cpu_exec_space_ppuio.s
roms/tests/cpu/cpu_exec_space/source/common/: print.s
roms/tests/cpu/cpu_flag_concurrency/: test_cpu_flag_concurrency.nes
roms/tests/cpu/cpu_flag_concurrency/source/: Makefile  nes.cfg  test_cpu_flag_concurrency.s
roms/tests/cpu/cpu_reset/: readme.txt
roms/tests/cpu/instr_misc/: readme.txt
roms/tests/cpu/instr_timing/: readme.txt
roms/tests/cpu/nestest/: nestest.txt
roms/tests/joy/dma_sync_test_v2/: dma_sync_test.asm  dma_sync_test.nes
roms/tests/joy/read_joy3/source/: readme.txt
roms/tests/joy/ruder/: ruder.nes
roms/tests/joy/spadtest-nes-0.01/: CHANGES.txt  README.md  makefile  nrom128.cfg  spadtest-nes.nes  zip.in
roms/tests/joy/spadtest-nes-0.01/src/: bg.s  global.inc  init.s  lights.s  main.s  nrom.s  ppuclear.s  spads.s
roms/tests/joy/spadtest-nes-0.01/tools/: pilbmp2nes.py
roms/tests/joy/vaus-test-0.02/: CHANGES.txt  README.txt  makefile  nes.ini  vaus-test.nes  zip.in
roms/tests/joy/vaus-test-0.02/src/: bcd.s  detailed.s  main.s  ram.h  vauspads.s
roms/tests/ppu/full_palette/: full_palette.nes  full_palette.s  full_palette_alt.nes
roms/tests/ppu/ntsc_torture/: ntsc_torture.nes
roms/tests/ppu/oam_read/: readme.txt
roms/tests/ppu/oamtest3/: alnum.1bp  constants.inc  oam3.asm
roms/tests/ppu/palette/: palette.nes
roms/tests/ppu/ppu_open_bus/: readme.txt
roms/tests/ppu/ppu_open_bus/source/: readme.txt
roms/tests/ppu/ppu_sprite_hit/: ppu_sprite_hit.nes  readme.txt
roms/tests/ppu/ppu_sprite_hit/rom_singles/: 01-basics.nes  02-alignment.nes  03-corners.nes  04-flip.nes  05-left_clip.nes  06-right_edge.nes  07-screen_bottom.nes  08-double_height.nes  09-timing.nes  10-timing_order.nes
roms/tests/ppu/ppu_sprite_hit/source/: 01-basics.s  02-alignment.s  03-corners.s  04-flip.s  05-left_clip.s  06-right_edge.s  07-screen_bottom.s  08-double_height.s  09-timing.s  10-timing_order.s
roms/tests/ppu/ppu_sprite_overflow/: ppu_sprite_overflow.nes  readme.txt
roms/tests/ppu/ppu_sprite_overflow/rom_singles/: 01-basics.nes  02-details.nes  03-timing.nes  04-obscure.nes  05-emulator.nes
roms/tests/ppu/ppu_sprite_overflow/source/: 01-basics.s  02-details.s  03-timing.s  04-obscure.s  05-emulator.s
roms/tests/ppu/ppu_vbl_nmi/source/: 02-vbl_set_time.s
roms/tests/ppu/tvpassfail/: README.txt  mk.bat  nes.ini  tv.s
roms/utils/coredump/: coredump-v1.0.nes
scripts/: README.md  cppcheck.sh  mk_msvc.ps1  nestest.sh
src/: .editorconfig  README.md  cartridge.cc  cartridge.h  cpu_mmu.cc  cpu_mmu.h  debug.h  ines.cc  ines.h  main.cc  memory.h  nes.cc  nes.h  ram.cc  ram.h  util.h
src/common/: bitfield.h  callback_manager.h  debug.cc  debug.h  overload_macro.h  serializable.cc  serializable.h  unsigned.h  util.h
src/common/components/ram/: ram.cc
src/common/components/rom/: rom.h
src/common/interfaces/: memory.h
src/mappers/: mapper.cc  mapper.h  mapper_000.cc  mapper_000.h
src/nes/: cpu_mmu.cc  cpu_mmu.h  nes.cc  nes.h  params.h
src/nes/apu/: README.md  apu.cc  apu.h  filters.h
src/nes/apu/my_apu/: apu.cc  apu.h
src/nes/cartridge/: cartridge.cc  cartridge.h  mapper.cc  mapper.h  parse_rom.cc  parse_rom.h  rom_file.h
src/nes/cartridge/file_formats/: ines.cc  rom_file.cc  rom_file.h
src/nes/cartridge/formats/: ines.cc  ines.h
src/nes/cartridge/mappers/: mapper.cc  mapper.h  mapper_000.cc  mapper_000.h  mapper_001.cc  mapper_001.h  mapper_002.cc  mapper_002.h  mapper_003.cc  mapper_003.h  mapper_004.cc  mapper_004.h  mapper_007.cc  mapper_007.h  mapper_009.cc  mapper_009.h
src/nes/cpu/: cpu.cc  cpu.h  cpu_mmu.cc  cpu_mmu.h  instructions.h  nestest.cc
src/nes/generic/ram/: ram.cc  ram.h
src/nes/generic/rom/: rom.cc  rom.h
src/nes/interfaces/: memory.h  mirroring.h  serializable.cc  serializable.h
src/nes/joy/: joy.cc  joy.h
src/nes/joy/controllers/: standard.cc  standard.h  zapper.cc  zapper.h
src/nes/memory_components/: cpu_mmu.cc  cpu_mmu.h  dma.cc  dma.h  ppu_mmu.cc  ppu_mmu.h
src/nes/ppu/: _wip.cc  color.h  debug.cc  dma.cc  dma.h  ppu.cc  ppu.h  ppu_debug.cc  ppu_mmu.cc
src/nes/ram/: ram.cc  ram.h
src/nes/wiring/: cpu_mmu.cc  cpu_mmu.h  dma.cc  interrupt_lines.cc  interrupt_lines.h  ppu_mmu.cc  ppu_mmu.h
src/ui/SDL2/: README.md  config.cc  config.h  event_handlers.cc  gui.cc  gui.h  gui_emu.cc  gui_menu.cc  main.cc  main_loop.cc  output_nes.cc  output_ui.cc  shared_state.cc  shared_state.h
src/ui/SDL2/fs/: load.cc  load.h  util.cc  util.h
src/ui/SDL2/gui_modules/: emu.cc  emu.h  menu.cc  menu.h  module.h  ppu_debug.cc  ppu_debug.h  single_header_impls.cc  widenes.cc  widenes.h
src/ui/SDL2/gui_modules/submodules/: menu.cc  menu.h  submodule.h
src/ui/SDL2/movies/fm2/: record.cc  record.h  replay.cc  replay.h
src/ui/SDL2/util/: Sound_Queue.cpp  Sound_Queue.h
src/ui/fs/: load.cc  load.h  load_rom.cc  load_rom.h  parse_rom.cc  parse_rom.h
src/ui/movies/fm2/: common.h  record.cc  record.h  replay.cc  replay.h
src/ui/movies/playback/: fm2.cc  fm2.h
(+8 files in other folders)
